styles/select-field.styl
@import 'nib'

@require '_variables';

$select-field-box-shadow = 0 2px 0 rgba(0, 0, 0, .1)

.select-field {
  position: relative;
  vertical-align: middle;
  cursor: pointer;

  &.disabled {
    cursor: default;
  }
}

.select-field-label {
  display: inline-block;
}

.select-field-toggle-button {
  position: relative;
  background: linear-gradient(top, white, $color-fill-2);
  border-radius: $border-radius;
  border: $border;
  color: inherit;
  display: block;
  font-family: inherit;
  font-size: inherit;
  line-height: 1.5;
  margin: 0;
  outline: none;
  padding: 6px 9px;
  width: 100%;
  box-shadow: $select-field-box-shadow;
  margin-top: $padding-small;
  text-align: left;

  &:after {
    content: "\f0dc";
    font-family: FontAwesome;
    color: $color-text-1;
    position: absolute;
    right: 10px;
    top: 0;
    line-height: 2.3em;
  }

  &:not(.disabled):hover {
    background: white;
  }

  &.blank-selected {
    color: $color-text-1;
  }
  &.has-error {
    border-color: red;
  }
  &.open {
    background: white;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    border-bottom: 1px solid $color-fill-2;
  }

  &.disabled {
    opacity: $opacity-disabled;
  }
}

.select-field-dropdown-list-container {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  max-height: 200px;
  overflow: scroll;
  z-index: 1050; // Needs to be higher than .has-error
  background-color: white;
  border: $border;
  border-bottom-left-radius: $border-radius;
  border-bottom-right-radius: $border-radius;
  box-shadow: $select-field-box-shadow;
}

.select-field-dropdown-list {
  margin: 0;

  li {
    padding: 6px 9px;

    &:hover {
      background-color: $color-blue-hover;
    }
    &.selected {
      font-weight: bold;
    }
  }
}

